--- a/main.css
+++ b/main.css
@@ -22,4 +22,6 @@ color: #4d2800;}
 p {font-size: 20;}
 img {max-width: 480px
 }
-@media (max-width: 480px) {h1 {font-size: 28px;}.col{width: 100%;}
+@media {max-width: 480px 
+	h1 {font-size: 28px;}.col{width: 100%;}
+}}
